# CPP-Practice-Projects

./: README.md
BasicsPractice/CarpetCleaningService/: main.cpp
BasicsPractice/MovieFanatics/: CMakeLists.txt  Movie.h  Movies.cpp  Movies.h  main.cpp
BasicsPractice/MyPlayerGame/: CMakeLists.txt  main.cpp
BasicsPractice/NumbersVectorManager/: CMakeLists.txt  main.cpp
BasicsPractice/PointersReferencesChallenge/: CMakeLists.txt  main.cpp
BasicsPractice/SubstitutionCipherWithStrings/: main.cpp
BasicsPractice/VectorsProgram/: CMakeLists.txt
BreakOutGame/BrakeOut/: CMakeLists.txt  main.cpp
CarpetCleaningService/: CMakeLists.txt
CircleArea/: CMakeLists.txt  main.cpp
DollarsProgram/: CMakeLists.txt  main.cpp
FirstProgram/: CMakeLists.txt  main.cpp
IO Streams/Align&FillManipulators/: CMakeLists.txt  main.cpp
IO Streams/AutomatedGrader/: CMakeLists.txt  main.cpp
IO Streams/BooleansManipulators/: CMakeLists.txt  main.cpp
IO Streams/CopyFile/: CMakeLists.txt  copy.txt  main.cpp
IO Streams/FloatsManipulators/: CMakeLists.txt  main.cpp
IO Streams/IntegersManipulators/: CMakeLists.txt  main.cpp
MovieFanatics/: Movie.cpp
MyPlayerGame/: Player.cpp  Player.h
NumbersVectorManager/: main.cpp
ObjectOrientedProgramming/AccountClassInheritance/: Account.cpp  Account.h  Account_Utils.cpp  Account_Utils.h  CMakeLists.txt  Checking_Account.cpp  Checking_Account.h  Savings_Account.cpp  Savings_Account.h  Trust_Account.cpp  Trust_Account.h  main.cpp
STL/ArrayContainer/: main.cpp  (+1 more)
SubstitutionCipherWithStrings/: CMakeLists.txt
VectorsProgram/: main.cpp
(+169 files in other folders)
